
In the following text, the tag "USER" indicates a significant change that will impact user experience in some way.
The tag "DEVELOPER" indicates a change that significantly impacts the code but is likely not visible to the user.

For more information on major releases merged into master from pre-release.

10th January 2025
- Selecting new sample now ensures the Save checkbox in ScanImage is not enabled. This fixes a rare user problem. 


20th September 2024
- New Sample resets the image size and also re-loads ScanImage config files.
- Some tweaks to MaiTai laser modelock check
- Minor bugfix affecting installs that are not done via Git


10th July 2024
- USER: Image size resets when user select new sample
- USER: Reset ScanImage on new sample

3rd June 2024
The following changes have been made over the last few months. There may be other minor changes too.
For information on adding new settings to the settings file(s) see: https://bakingtray.mouse.vision/getting-started/finishing-the-install/the-settings-files

- USER: Histogram windows close when acquisition saving is initiated.
- USER: remove "zoom" from the drop-down for resolution and convert "u" to Greek "mu".
- USER: add convenience buttons to raise sample and lower Z stage
- USER: close the new persistent histogram windows when tile saving is set up. likely this results in a small speedup.
- USER: Bake is not possible if sample ID or sample folder contain non-alphanumeric (- and _ are OK) The recipe class no longer corrects funny characters in file names.
- USER: A confirmation dialog pops up when the user tries to unlock the Z stage.
- USER: The error message that tells users to have the same PMTs on as channels saved is now worded more clearly.
- BUGFIX: fixed a bug that was causing voxel size to be incorrectly written now and then.
- BUGFIX: addLaserCalib fails gracefully if BakingTray is not started.
- POWERUSER: Update example settings files
- Minor bugfixes to acquisition resume